--- a/_config.yml
+++ b/_config.yml
@@ -49,14 +49,14 @@ plugins: [jekyll-paginate]
 markdown: redcarpet
 redcarpet:
     extensions: [ "hard_wrap","autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify","no_intra_emphasis"]
-kramdown:
-  input: GFM                            # use Github Flavored Markdown !important
-  syntax_highlighter_opts:
-    span:
-      line_numbers: false
-    block:
-      line_numbers: true
-      start_line: 1
+# kramdown:
+#   input: GFM                            # use Github Flavored Markdown !important
+#   syntax_highlighter_opts:
+#     span:
+#       line_numbers: false
+#     block:
+#       line_numbers: true
+#       start_line: 1
 
 
 
