--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,9 @@ SEOTitle: 冯佳文的博客 | FengJiaWen Blog
 header-img: img/home-bg.jpg
 email: 595954902@qq.com
 description: "任何事情不应该觉得没有希望就不去做,而是因为去努力做了才有希望"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
-url: "https://huangxuan.me"              # your host, for absolute URL
+keyword: "冯佳文, FLE冯佳文, FLE, 冯佳文的博客, FLE Blog, 博客, 个人网站, 互联网, WebFL"
+url: "https://f43250.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
-
 # Publish posts or collection documents with a future date.
 future: true
 
