--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: FLE Blog
 SEOTitle: 冯佳文的博客 | FengJiaWen Blog
-header-img: img/home-bg.jpg
+header-img: img/about-bg-walle.jpg
 email: 595954902@qq.com
 description: "任何事情不应该觉得没有希望就不去做,而是因为去努力做了才有希望"
 keyword: "冯佳文, FLE冯佳文, FLE, 冯佳文的博客, FLE Blog, 博客, 个人网站, 互联网, WebFL"
